# ragbench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: all.yaml  bm25.yaml  hybrid.yaml  llm_heavy.yaml  parent_doc.yaml  recommended.yaml  rerank.yaml  vector.yaml
data/demo/: qrels.jsonl  questions.jsonl
data/demo/docs/: doc_001.md  doc_002.md  doc_003.md  doc_004.md  doc_005.md  doc_006.md  doc_007.md  doc_008.md  doc_009.md  doc_010.md  doc_011.md  doc_012.md  doc_013.md  doc_014.md  doc_015.md  doc_016.md  doc_017.md  doc_018.md  doc_019.md  doc_020.md  doc_021.md  doc_022.md
docs/: configuration.md  dataset-format.md  extending.md  github-setup.md  release-checklist.md
src/ragbench/: __init__.py  cli.py
src/ragbench/config/: loader.py  schema.py
src/ragbench/datasets/: __init__.py  demo_generator.py  loader.py  schema.py
src/ragbench/documents/: __init__.py  chunkers.py  loaders.py  schema.py
src/ragbench/evaluation/: __init__.py  answer_judge.py  evaluator.py  failure_analysis.py  retrieval_metrics.py
src/ragbench/models/: __init__.py  cost.py  embeddings.py  llms.py  rerankers.py
src/ragbench/rag_systems/: __init__.py  base.py  bm25_rag.py  hybrid_rag.py  llm_heavy_rag.py  parent_doc_rag.py  rerank_rag.py  vector_rag.py
src/ragbench/reporting/: html_report.py  markdown_report.py
src/ragbench/stores/: __init__.py  bm25_store.py  hybrid_store.py  vector_store.py
src/ragbench/utils/: __init__.py  env.py  hashing.py  ids.py  jsonl.py  query_planning.py  text.py  timing.py
tests/: test_answer_judge.py  test_bm25_store.py  test_bm25_system.py  test_chunkers.py  test_config_loader.py  test_cost_tracker.py  test_dataset_loader.py  test_env.py  test_evaluator_smoke.py  test_mock_mode.py  test_query_planning.py  test_retrieval_metrics.py
