[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbench"
version = "0.1.0"
description = "Evaluation-first RAG benchmark framework for comparing retrieval and generation strategies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alexandre Sheva", email = "alexandre.sheva@gmail.com" },
]
keywords = ["rag", "retrieval", "evaluation", "benchmark", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.9",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "pandas>=2",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.6",
  "openai>=1.0",
  "jinja2>=3.1",
  "markdown>=3.5",
  "chromadb>=0.5",
]

[project.urls]
Homepage = "https://github.com/alexandre0sheva/ragbench"
Repository = "https://github.com/alexandre0sheva/ragbench"
Issues = "https://github.com/alexandre0sheva/ragbench/issues"
Documentation = "https://github.com/alexandre0sheva/ragbench#readme"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "build>=1.2",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
  "types-Markdown",
]
pdf = ["pypdf>=4"]

[project.scripts]
ragbench = "ragbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ragbench = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = ["results", "data/demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["ragbench"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "rank_bm25.*", "tiktoken.*"]
ignore_missing_imports = true
